<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/announcement_frame"
        android:layout_width="330dp"
        android:layout_height="550dp"
        android:background="@drawable/announcement"
        app:layout_constraintBottom_toTopOf="@id/login_bottom"
        app:layout_constraintLeft_toRightOf="@id/announcement_vertical_1"
        app:layout_constraintRight_toLeftOf="@id/announcement_vertical_2"
        app:layout_constraintTop_toTopOf="@+id/bl_top">


        <TextView
            android:id="@+id/announcement_content_OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/bg_announcement_ok"
            android:text="  OK  "
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/announcement_title_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/announcement_title_press"
            android:fontFamily="@font/hanyisentytang"
            android:gravity="center"
            android:text="@string/announcement_title_1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/announcement_title_bottom"
            app:layout_constraintLeft_toRightOf="@id/announcement_content_left"
            app:layout_constraintRight_toLeftOf="@id/announcement_title_2"
            app:layout_constraintTop_toBottomOf="@id/announcement_title_top" />

        <TextView
            android:id="@+id/announcement_title_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@drawable/announcement_title_unpress"
            android:gravity="center"
            android:text="@string/announcement_title_2"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/announcement_title_bottom"
            app:layout_constraintLeft_toRightOf="@id/announcement_title_1"
            app:layout_constraintRight_toLeftOf="@id/announcement_title_3"
            app:layout_constraintTop_toBottomOf="@id/announcement_title_top" />

        <TextView
            android:id="@+id/announcement_title_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/announcement_title_unpress"
            android:fontFamily="@font/hanyisentytang"
            android:gravity="center"
            android:text="@string/announcement_title_3"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/announcement_title_bottom"
            app:layout_constraintLeft_toRightOf="@id/announcement_title_2"
            app:layout_constraintRight_toLeftOf="@id/announcement_content_right"
            app:layout_constraintTop_toBottomOf="@id/announcement_title_top" />

        <TextView
            android:id="@+id/announcement_content_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoLink="web"
            android:fontFamily="@font/hanyisentytang"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/announcement_content_bottom"
            app:layout_constraintLeft_toRightOf="@id/announcement_content_left"
            app:layout_constraintRight_toLeftOf="@id/announcement_content_right"
            app:layout_constraintTop_toBottomOf="@id/announcement_content_top"
            tools:text="@string/announcemetn_content_1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/announcement_title_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/announcement_title_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/announcement_content_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.22" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/announcement_content_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/announcement_content_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/announcement_content_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/announcement_vertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/announcement_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

</androidx.constraintlayout.widget.ConstraintLayout>